--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -69,5 +69,13 @@
     var userBrightness = document.getElementById("brightness");
     let currentBrightness = userBrightness.value;
     brightness.style.filter = `brightness(${currentBrightness})`;
+
+    function onLoadFunction() {
+    var videos = document.querySelectorAll('video');
+    videos.forEach(function(video) {
+    video.play();
+    });
+}
+window.onload = onLoadFunction;
 </script>
 </html>
