--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,5 +75,12 @@
 <script>
     var audio = document.getElementById("audio");
     audio.volume = .02;
+    function onLoadFunction() {
+    var videos = document.querySelectorAll('video');
+    videos.forEach(function(video) {
+    video.play();
+    });
+}
+window.onload = onLoadFunction;
 </script>
 </html>
