Added audio autoplay for mobile version

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -74,6 +74,7 @@
     var videos = document.querySelectorAll('video');
     videos.forEach(function(video) {
     video.play();
+    audio.play();
     });
 }
 window.onload = onLoadFunction;
