--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,6 +79,7 @@
     var videos = document.querySelectorAll('video');
     videos.forEach(function(video) {
     video.play();
+    audio.play();
     });
 }
 window.onload = onLoadFunction;
