Fixed font issue

--- a/src/main/resources/templates/settings/settingsProfile.html
+++ b/src/main/resources/templates/settings/settingsProfile.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" th:href="@{/css/template.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/standard.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/settingsProfile.css}" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=creepster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
