--- a/src/main/resources/templates/loadRegister.html
+++ b/src/main/resources/templates/loadRegister.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/template.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/standard.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/load.css}" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=creepster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
