adjusting key file

--- a/src/main/resources/templates/settings/settingsProfile.html
+++ b/src/main/resources/templates/settings/settingsProfile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obscuro</title>
-    <script type="text/javascript" th:src="@{/js/key.js}"></script>
+    <script type="text/javascript" th:src="@{/js/keys.js}"></script>
     <link rel="stylesheet" th:href="@{/css/template.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/standard.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/settingsProfile.css}" type="text/css">
