working api error

--- a/src/main/resources/templates/settings/settingsProfile.html
+++ b/src/main/resources/templates/settings/settingsProfile.html
@@ -93,7 +93,7 @@
 </body>
 <footer th:replace="~{partials/footer :: footer}"></footer>
 <script>
-    const client = filestack.init('${FILESTACK_KEY}');
+    const client = filestack.init(AhDqzkZ1jR9aLMXnoEicMz);
     document.getElementById('upload-btn').addEventListener('click', function (event) {
         event.preventDefault();
         const options = {
