--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=creepster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
+        * {
+            color: white;
+            font-family: 'creepster', serif;
+        }
         .back-settings-icon {
             display: none;
         }
