Adjusted media queries

--- a/src/main/resources/static/css/sweetDreams.css
+++ b/src/main/resources/static/css/sweetDreams.css
@@ -33,7 +33,7 @@ html {
         border-left: 1px solid;
     }
     .homeMenu {
-        margin: 0;
+        margin-left: 10vw;
     }
     #leaderboardContainer {
         margin-left: 10%;
@@ -56,7 +56,7 @@ html {
         border-left: 1px solid;
     }
     .homeMenu {
-        margin: 0;
+        margin-left: 10vw;
     }
     #leaderboardContainer {
         margin-left: 10%;
@@ -79,7 +79,7 @@ html {
         border-left: 1px solid;
     }
     .homeMenu {
-        margin: 0;
+        margin-left: 10vw;
     }
     #leaderboardContainer {
         margin-left: 10%;
@@ -102,7 +102,7 @@ html {
         border-left: 1px solid;
     }
     .homeMenu {
-        margin: 0;
+        margin-left: 10vw;
     }
     #leaderboardContainer {
         margin-left: 10%;
@@ -128,7 +128,7 @@ html {
         border-left: 1px solid;
     }
     .homeMenu {
-        margin: 0;
+        margin-left: 10vw;
     }
     #leaderboardContainer {
         margin-left: 10%;
@@ -154,7 +154,7 @@ html {
         border-left: 1px solid;
     }
     .homeMenu {
-        margin: 0;
+        margin-left: 10vw;
     }
     #leaderboardContainer {
         margin-left: 10%;
