--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Obscuro</title>
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 <header th:fragment="header">
     <div class="icons">
