--- a/src/main/resources/templates/sleepParalysisLost.html
+++ b/src/main/resources/templates/sleepParalysisLost.html
@@ -6,6 +6,8 @@
     <title>Obscuro</title>
     <link rel="stylesheet" th:href="@{/css/template.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/sleepParalysisLost.css}" type="text/css">
+    <link rel="icon" href="/img/faviconElon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/faviconElon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster&display=swap">
