--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/template.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/standard.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/css/register.css}" type="text/css">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster&display=swap">
