adjusted in game icon rendering

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -44,6 +44,7 @@ html {
         text-align: start;
         padding: 2%;
         font-size: 3.5vh;
+        font-style: normal;
         border: 0;
     }
 }
