--- a/src/main/resources/static/css/nightmare.css
+++ b/src/main/resources/static/css/nightmare.css
@@ -59,6 +59,9 @@ html {
 
 }
 @media (min-width: 1px) and (max-width: 368px) {
+  .homeMenu {
+    margin-left: 0;
+}
   img {
       position: absolute;
       background-color: transparent;
@@ -67,6 +70,9 @@ html {
   }
 }
 @media (min-width: 369px) and (max-width: 560px) {
+  .homeMenu {
+    margin-left: 0;
+}
   img {
       position: absolute;
       background-color: transparent;
@@ -75,6 +81,9 @@ html {
   }
 }
 @media (min-width: 561px) and (max-width: 769px) {
+  .homeMenu {
+    margin-left: 0;
+}
   img {
       position: absolute;
       background-color: transparent;
@@ -83,6 +92,9 @@ html {
   }
 }
 @media (min-width: 769px) and (max-width: 950px) {
+  .homeMenu {
+    margin-left: 0;
+}
   img {
       position: absolute;
       background-color: transparent;
