--- a/src/main/resources/static/css/sleepParalysis.css
+++ b/src/main/resources/static/css/sleepParalysis.css
@@ -23,6 +23,9 @@
 }
 
 @media (min-width: 1px) and (max-width: 368px) {
+    .homeMenu {
+        margin-left: 0;
+    }
     img {
         position: absolute;
         background-color: transparent;
@@ -31,6 +34,9 @@
     }
 }
 @media (min-width: 369px) and (max-width: 560px) {
+    .homeMenu {
+        margin-left: 0;
+    }
 img {
     position: absolute;
     background-color: transparent;
@@ -39,6 +45,9 @@ img {
 }
 }
 @media (min-width: 561px) and (max-width: 769px) {
+    .homeMenu {
+        margin-left: 0;
+    }
 img {
     position: absolute;
     background-color: transparent;
@@ -47,6 +56,9 @@ img {
 }
 }
 @media (min-width: 769px) and (max-width: 950px) {
+    .homeMenu {
+        margin-left: 0;
+    }
 img {
     position: absolute;
     background-color: transparent;
