--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -6,22 +6,26 @@ html {
         justify-content: center;
     }
     #loginBtn {
-        width: 5%;
+        width: 26%;
+        padding: 2%;
+        font-size: 4vh;
     }
     #registerBtn {
         width: 14.5%;
     }
     #mainMenuBtn {
-        width: 45%;
+        width: 60%;
         padding: 2%;
-        font-size: 3.5vh;
+        font-size: 4vh;
     }
     input {
-        width: 30%;
+        width: 40%;
         text-align: start;
-        padding: 2%;
-        font-size: 3.5vh;
+        padding: 0 2%;
+        font-size: 4vh;
+        font-style: normal;
         border: 0;
+        margin: 0;
     }
 }
 @media (min-width: 369px) and (max-width: 560px) {
@@ -35,15 +39,15 @@ html {
         width: 14.5%;
     }
     #mainMenuBtn {
-        width: 45%;
+        width: 60%;
         padding: 2%;
-        font-size: 3.5vh;
+        font-size: 4vh;
     }
     input {
-        width: 30%;
+        width: 40%;
         text-align: start;
         padding: 2%;
-        font-size: 3.5vh;
+        font-size: 4vh;
         font-style: normal;
         border: 0;
     }
