--- a/src/main/resources/templates/sweetDreamsLost.html
+++ b/src/main/resources/templates/sweetDreamsLost.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
+        * {
+            color: red;
+        }
         h2 {
             margin-left: 5vw;
         }
