--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -7,7 +7,7 @@ html {
     }
     #loginBtn {
         width: 26%;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
     }
     #registerBtn {
@@ -15,13 +15,13 @@ html {
     }
     #mainMenuBtn {
         width: 60%;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
     }
     input {
         width: 40%;
         text-align: start;
-        padding: 0 2%;
+        padding: 2% 0;
         font-size: 4vh;
         font-style: normal;
         border: 0;
@@ -40,13 +40,13 @@ html {
     }
     #mainMenuBtn {
         width: 60%;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
     }
     input {
         width: 40%;
         text-align: start;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
         font-style: normal;
         border: 0;
@@ -64,13 +64,13 @@ html {
     }
     #mainMenuBtn {
         width: 45%;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
     }
     input {
         width: 30%;
         text-align: start;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
         border: 0;
     }
@@ -87,13 +87,13 @@ html {
     }
     #mainMenuBtn {
         width: 45%;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
     }
     input {
         width: 30%;
         text-align: start;
-        padding: 2%;
+        padding: 2% 0;
         font-size: 4vh;
         border: 0;
     }
@@ -111,12 +111,14 @@ html {
     #mainMenuBtn {
         width: 45%;
         font-size: 4vh;
+        padding: 0;
     }
     input {
         width: 30%;
         text-align: start;
         font-size: 4vh;
         border: 0;
+        padding: 0;
     }
 }
 @media (min-width: 1301px) {
@@ -131,11 +133,13 @@ html {
     }
     #mainMenuBtn {
         width: 10%;
+        padding: 0;
     }
     input {
         width: 7%;
         text-align: start;
         border: 0;
         font-size: 3vh;
+        padding: 0;
     }
 }
