Adjusted mobile styling

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -50,7 +50,7 @@
     </audio>
     <div class="homeMenu">
         <h2>>On the <strong>left,</strong> click the extra amongst the rest...</h2>
-        <h2>>Top 5 Leaderboard</h2>
+        <h2>>Create account to play!</h2>
         <h2>>Profile badge: Top 3</h2>
         <h2>*Sleep Paralysis: 15 sec time limit*</h2>
     </div>
