--- a/src/main/resources/static/css/template.css
+++ b/src/main/resources/static/css/template.css
@@ -83,6 +83,7 @@
         height: 100%;
         font-size: 3vh;
         margin-left: 2%;
+        text-align: center;
     }
     .icon {
         font-size: 3vh;
